Projet GL/test/src/test/deca/context/invalid/increment6/bad-sign.deca
// test call method with a bad signature

// Historique : cree le 18/01/2023

class A{
    int x;

    int m(int i){
        return i;
    }
}

{
    A a = new A();

    // Must be refused
    int y = a.m();
}